# 42_wordle

./: Makefile  README.md  french_words.txt  pyproject.toml  words.txt
src/: __main__.py  colors.py  game.py  parsing.py  renderer.py
src/classes/: Exception.py
tests/: test_main.py
