[project]
name = "Wordle"
version = "0.1.0"
description = "Guess the Wordle"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.6.1",
]

[dependency-groups]
dev = ["flake8>=7.0.0", "mypy>=1.10.0", "pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.flake8]
exclude = [".venv", "__pycache__", ".mypy_cache", ".pytest_cache"]
